# hypnolib

./: .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  Jenkinsfile  Makefile  README.md  index.html  params.json
Hypno/: CMakeLists.txt
Hypno/Comms/: CMakeLists.txt
Hypno/Comms/gtest/: EchoServer.cpp  Factory_unittest.cpp  FileDescriptor_unittest.cpp  SocketClientServer_unittest.cpp  SocketClient_unittest.cpp  Socket_unittest.cpp  TtyClientServer_unittest.cpp  TtyClient_unittest.cpp  Tty_unittest.cpp  test.cpp  test.h
Hypno/Comms/inc/: Comms.h  CommsClient.h  CommsServer.h  IComms.h  Socket.h  TtyComms.h
Hypno/Comms/inc/hypno/: Comms.h  CommsClient.h  CommsDebug.h  CommsException.h  CommsInc.h  CommsServer.h  FileDescriptor.h  IComms.h  IFile.h  Socket.h  Tty.h
Hypno/Comms/src/: Comms.cpp  CommsClient.cpp  CommsFactory.cpp  CommsServer.cpp  FileDescriptor.cpp  Socket.cpp  Tty.cpp  TtyComms.cpp
Hypno/Debug/gtest/: Debug_unittest.cpp
Hypno/Debug/inc/: DebugMgr.h  DebugStream.h  Debuggable.h  IDebug.h
Hypno/Debug/src/: DebugMgr.cpp  Debuggable.cpp
Hypno/Gadget/: CMakeLists.txt
Hypno/Gadget/inc/: GadgetClient.h  GadgetEmu.h  GadgetNoLock.hpp  GadgetQuartz.h  GadgetQuartzSettings.h  GadgetServer.h
Hypno/Gadget/src/: GadgetClient.cpp  GadgetEmu.cpp  GadgetQuartz.cpp  GadgetServer.cpp
Hypno/HypnoSrc/: CMakeLists.txt  README.txt
Hypno/HypnoSrc/gtest/: Packet_unittest.cpp
Hypno/HypnoSrc/inc/: Options.h  Packet.h
Hypno/HypnoSrc/src/: CRC16.cpp  Command.cpp  Gadget.cpp  Packet.cpp
Hypno/Model/: CMakeLists.txt
Hypno/Model/gtest/: Colour_unittest.cpp  Coord_unittest.cpp  CubeCoordMap_unittest.cpp
Hypno/Model/inc/: AsciiColour.h  Colour.h  Coord.h  CoordMap.h  CubeModel.h  (+3 more)
Hypno/Paint/: CMakeLists.txt
Hypno/common/: CMakeLists.txt
Hypno/doc/: Doxyfile
HypnoDemo/: CMakeLists.txt
HypnoDemo/inc/: CubeAnim.h  HypnoDemo.h  SquareAnim.h
HypnoDemo/src/: CubeAnim.cpp  HypnoDemo.cpp  SquareAnim.cpp
HypnoText/: CMakeLists.txt
HypnoText/inc/: TextAnim.h
HypnoText/src/: HypnoText.cpp  TextAnim.cpp
LibHypno/: CMakeLists.txt
LibHypno/gtest/: Packet_unittest.cpp
LibHypno/inc/: CRC16.h  Command.h  Gadget.h  Options.h  Packet.h  defines.h
LibHypno/src/: CRC16.cpp  Command.cpp  Gadget.cpp  Packet.cpp
LibHypnoQuartz/: CMakeLists.txt
LibHypnoQuartz/Comms/: CMakeLists.txt
LibHypnoQuartz/Comms/gtest/: EchoServer.cpp  SocketClientServer_unittest.cpp  SocketClient_unittest.cpp  Socket_unittest.cpp  TtyClientServer_unittest.cpp  TtyClient_unittest.cpp  Tty_unittest.cpp  test.cpp  test.h
LibHypnoQuartz/Comms/inc/: Comms.h  CommsClient.h  CommsServer.h  IComms.h  Socket.h  TtyComms.h
LibHypnoQuartz/Comms/src/: Comms.cpp  CommsClient.cpp  CommsServer.cpp  Socket.cpp  TtyComms.cpp
LibHypnoQuartz/Debug/: CMakeLists.txt
LibHypnoQuartz/Debug/gtest/: Debug_unittest.cpp
LibHypnoQuartz/Debug/inc/: DebugMgr.h  DebugStream.h  Debuggable.h  IDebug.h
LibHypnoQuartz/Debug/src/: DebugMgr.cpp  Debuggable.cpp
LibHypnoQuartz/Gadget/: CMakeLists.txt
LibHypnoQuartz/Gadget/inc/: GadgetQuartz.h  GadgetQuartzSettings.h  GadgetTTY.h
LibHypnoQuartz/Gadget/src/: GadgetQuartz.cpp  GadgetTTY.cpp
LibHypnoQuartz/Model/: CMakeLists.txt
LibHypnoQuartz/Model/gtest/: Colour_unittest.cpp  Coord_unittest.cpp  CubeCoordMap_unittest.cpp
LibHypnoQuartz/Model/inc/: Colour.h  Coord.h  CoordMap.h  CubeCoordMap.h  CubeModel.h  Model.h  SquareModel.h
LibHypnoQuartz/Model/src/: Coord.cpp  CoordMap.cpp  CubeCoordMap.cpp  CubeModel.cpp  Model.cpp  SquareModel.cpp
LibHypnoQuartz/Paint/: CMakeLists.txt
LibHypnoQuartz/Paint/gtest/: Animator_unittest.cpp
LibHypnoQuartz/Paint/inc/: AnimCallback.h  Animator.h  IAnimatorCallback.h
LibHypnoQuartz/Paint/src/: Animator.cpp
LibHypnoQuartz/Text/: CMakeLists.txt
LibHypnoQuartz/Text/gtest/: Font4x4_unittest.cpp  FontChar_unittest.cpp
LibHypnoQuartz/Text/inc/: AlienFont4x4.h  Font.h  Font4x4.h  FontChar.h  FontChar4x4.h
LibHypnoQuartz/Text/src/: AlienFont4x4.cpp  Font.cpp  Font4x4.cpp  Font5x4.cpp  FontChar.cpp
LibHypnoQuartz/common/: CMakeLists.txt
LibHypnoQuartz/common/gtest/: Path_unittest.cpp  Thread_unittest.cpp  test.cpp
LibHypnoQuartz/common/gtest/test/: a_link  file1.txt  file3.txt
LibHypnoQuartz/common/inc/: Gtesting.h  Path.h  Thread.h  TimeUtils.h  WinEmu.h
LibHypnoQuartz/common/src/: Thread.cpp  TimeUtils.cpp
LibHypnoQuartz/doc/: Doxyfile
LibHypnoQuartz/html/: _alien_font4x4_8cpp.html  _alien_font4x4_8cpp.js  _alien_font4x4_8cpp_source.html  _alien_font4x4_8h.html  _alien_font4x4_8h_source.html  _anim_callback_8cpp.html  _anim_callback_8cpp_source.html  _anim_callback_8h.html  _anim_callback_8h_source.html  _animator_8cpp.html  _animator_8cpp_source.html  _animator_8h.html  _animator_8h_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _colour_8cpp.html  _colour_8cpp.js  _colour_8cpp_source.html  _colour_8h.html  _colour_8h_source.html  _comms_8cpp.html  _comms_8cpp_source.html  _comms_8h.html  _comms_8h_source.html  _comms_client_8cpp.html  _comms_client_8cpp.js  _comms_client_8cpp_source.html  _comms_client_8h.html  _comms_client_8h_source.html  _comms_server_8cpp.html  _comms_server_8cpp.js  _comms_server_8cpp_source.html  _comms_server_8h.html  _comms_server_8h_source.html  _coord_8cpp.html  _coord_8cpp_source.html  _coord_8h.html  _coord_8h_source.html  _coord_map_8cpp.html  _coord_map_8cpp_source.html  (+483 more)
LibHypnoQuartz/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_4.js  defines_6.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  (+60 more)
cmake/Modules/: coverage.cmake  cppcheck.cmake  functions.cmake  gtest.cmake  settings.cmake  valgrind.cmake
cmake/inc/: pkg-config.cmake.in
(+72 files in other folders)
